--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,14 +5,15 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.zimneos.mycards"
         minSdk 21
-        targetSdk 31
-        versionCode 1
-        versionName "1.0"
+        //noinspection OldTargetApi
+        targetSdk 33
+        versionCode 7
+        versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -30,18 +31,23 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.6.0'
+    }
+    namespace 'com.zimneos.mycards'
 }
 
 dependencies {
     implementation 'com.google.android.material:material:1.3.0-alpha01'
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.biometric:biometric:1.2.0-alpha05'
     implementation "android.arch.lifecycle:extensions:1.1.1"
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
 }
