--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.zimneos.mycards"
         minSdk 21
         targetSdk 35
-        versionCode 26
-        versionName "2.6"
+        versionCode 27
+        versionName "2.7"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -33,6 +33,9 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion '1.6.0'
     }
+    buildFeatures {
+        viewBinding true
+    }
     namespace 'com.zimneos.mycards'
 }
 
@@ -52,5 +55,4 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
 }
